--- a/test/02_xhr_mini-axios.html
+++ b/test/02_xhr_mini-axios.html
@@ -12,5 +12,56 @@
   <button onclick="testPut()">发送PUT请求</button><br>
   <button onclick="testDelete()">发送Delete请求</button><br>
 
+  <script>
+    // 封装简单版axios
+    function axios({method='get',url,params,data}) {
+        method = method.toLocaleUpperCase();
+        url = 'http://localhost:3000' + url;
+        // 返回一个promise对象
+        return new Promise((resolve,reject)=>{
+          const xhr = new XMLHttpRequest();
+          if (params) { //params是query参数,http://localhost:3000/posts?id=1&name=kobe
+            let str = '';
+            for (let i in params){
+              str += `${i}=${params[i]}&`;
+            }
+            str = str.slice(0,-1);
+            url = url +'?' + str;
+          }
+          xhr.open(method,url);
+          // 绑定监听ajax请求状态改变事件
+          xhr.onreadystatechange = ()=>{
+            // 通过状态码判断ajax请求的状态
+            if (xhr.readyState !== 4) return;
+            // 通过响应状态码判断请求是否成功
+            if (xhr.status >= 200 && xhr.status < 300){
+              const response = {
+                status:xhr.status,
+                data:JSON.parse(xhr.response)
+              }
+              resolve(response);
+            }else {
+              reject(new Error('请求失败,error:' + xhr.status));
+            }
+          }
+          //判断请求方式来确定请求体
+          if (method === 'GET'){
+            xhr.send();
+          }else {
+            xhr.send(JSON.stringify(data));
+          }
+        })
+    }
+  </script>
+
+  <script>
+    // 发送get请求
+    function testGet() {
+      axios({url:'/posts',params:{title:'json-server2'}})
+    }
+    
+
+  </script>
+
 </body>
 </html>
