--- a/test/02_xhr_mini-axios.html
+++ b/test/02_xhr_mini-axios.html
@@ -48,6 +48,8 @@
           if (method === 'GET'){
             xhr.send();
           }else {
+            // 设置请求头
+            xhr.setRequestHeader('Content-Type', 'application/json;charset=utf-8');
             xhr.send(JSON.stringify(data));
           }
         })
@@ -59,8 +61,28 @@
     function testGet() {
       axios({url:'/posts',params:{title:'json-server2'}})
     }
-    
+    // 发送post请求
+    function testPost() {
+      axios({method:'post',
+        url:'/posts',
+        data:{
+          title: 24,
+          author:8
+        }
+      })
+    }
+    // 发送put请求
+    function testPut() {
+      axios({method:'put',url:'/posts/5',data:{
+          title:'hahha',
+          author:'xiaoji'
+        }})
+    }
 
+    // 发送delete请求
+    function testDelete() {
+      axios({method:'delete',url:'/posts/6'})
+    }
   </script>
 
 </body>
