--- a/test/04_axios二次封装(基本) 本地服务器版.html
+++ b/test/04_axios二次封装(基本) 本地服务器版.html
@@ -31,7 +31,7 @@
 
   <script>
     // 1). 统一进行请求配置: 基础路径/超时时间等
-    axios.defaults.baseURL = 'https://api.github.com/search';   //基础路径
+    axios.defaults.baseURL = 'http://localhost:4000';   //基础路径
     axios.defaults.timeout = 20000;   //超时时间
     // 3). 请求可能需要携带token数据
     let token = 'kobe';
@@ -50,7 +50,9 @@
       return response.data  //4). 请求成功的value不再是response, 而是response.data
     },(error)=>{
       NProgress.done();
-      throw error
+      // 5). 请求失败/出错统一进行处理, 每个请求可以不用单独处理
+      console.log('获取用户列表失败: ' + error.message);
+      return new Promise(()=>{});
     })
 
   </script>
@@ -58,7 +60,7 @@
   <script>
     // 点击获取用户列表
     function getUsers() { //q=v
-      axios.get('/users',{params:{q:'v'}})
+      axios.get('/products1')
       .then(data => {
         console.log('用户列表数据: ' + data);
       },error => {
@@ -67,7 +69,7 @@
     }
     // 点击获取仓库列表
     function getRepos() { //q=v&sort=stars
-      axios.get('/repositories',{params:{q:'v',sort:'stars'}})
+      axios.get('/products2')
       .then(data => {
         console.log('仓库列表数据: ' + data);
       },error => {
